@@ -587,6 +587,25 @@ TEST(highlight_is_completed)
 	ASSERT_COMPLETION(L"hi clear ", L"hi clear {*.jpg}");
 }
 
+TEST(highlight_columns_are_completed)
+{
+	curr_stats.vlua = vlua_init();
+
+	assert_success(vlua_run_string(curr_stats.vlua, "function handler() end"));
+	assert_success(vlua_run_string(curr_stats.vlua,
+				"vifm.addcolumntype{ name = 'Test', handler = handler }"));
+
+	/* Completion doesn't require columns to be colored. */
+	ASSERT_COMPLETION(L"hi column:s", L"hi column:size");
+	ASSERT_COMPLETION(L"hi column:T", L"hi column:Test");
+
+	assert_success(cmds_dispatch("hi column:size cterm=bold", &lwin, CIT_COMMAND));
+	ASSERT_COMPLETION(L"hi clear column:si", L"hi clear column:size");
+
+	vlua_finish(curr_stats.vlua);
+	curr_stats.vlua = NULL;
+}
+
 TEST(command_options_are_completed)
 {
 	ASSERT_COMPLETION(L"copy -", L"copy -skip");
